Sections added to profile table view

--- a/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
+++ b/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WEy-2h-POy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wGj-ad-sW1">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -404,27 +404,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d0e-cO-w4A">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d0e-cO-w4A">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kR6-bx-dtZ">
-                                        <rect key="frame" x="136" y="206" width="48" height="30"/>
-                                        <state key="normal" title="Logout"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WhE-Kk-2p5">
+                                        <rect key="frame" x="0.0" y="91" width="320" height="340"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="accountCell" id="CKj-CI-YaB">
+                                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CKj-CI-YaB" id="Vl7-mJ-SFX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
                                         <connections>
-                                            <action selector="logoutButtonAction:" destination="wGj-ad-sW1" eventType="touchUpInside" id="3DJ-2m-rd0"/>
+                                            <outlet property="dataSource" destination="wGj-ad-sW1" id="Fhr-oN-ndU"/>
+                                            <outlet property="delegate" destination="wGj-ad-sW1" id="s5a-eP-a9Q"/>
                                         </connections>
-                                    </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="omq-Vm-ccN">
-                                        <rect key="frame" x="27" y="94" width="46" height="30"/>
-                                    </stackView>
+                                    </tableView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.73333333329999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="WhE-Kk-2p5" secondAttribute="trailing" id="MqU-oP-Dgg"/>
+                                    <constraint firstItem="WhE-Kk-2p5" firstAttribute="leading" secondItem="d0e-cO-w4A" secondAttribute="leading" id="Rwj-EY-9IL"/>
+                                    <constraint firstItem="WhE-Kk-2p5" firstAttribute="top" secondItem="d0e-cO-w4A" secondAttribute="top" constant="91" id="aFw-Y3-fh3"/>
+                                    <constraint firstAttribute="bottom" secondItem="WhE-Kk-2p5" secondAttribute="bottom" constant="49" id="e5p-M1-yGf"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="1" blue="0.96985434459999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="d0e-cO-w4A" firstAttribute="top" secondItem="G51-p0-A9B" secondAttribute="top" id="GFz-U8-gHL"/>
+                            <constraint firstItem="d0e-cO-w4A" firstAttribute="leading" secondItem="G51-p0-A9B" secondAttribute="leading" id="INf-DZ-oTh"/>
+                            <constraint firstItem="d0e-cO-w4A" firstAttribute="height" secondItem="G51-p0-A9B" secondAttribute="height" id="M6T-H1-CAG"/>
+                            <constraint firstItem="d0e-cO-w4A" firstAttribute="width" secondItem="G51-p0-A9B" secondAttribute="width" id="qsR-w9-OB8"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="profileIcon" id="HgO-TJ-gg2"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="account" destination="WhE-Kk-2p5" id="hOr-iF-x45"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R4M-Cj-6av" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -461,7 +484,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sFT-tP-Ia1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3122" y="-1875"/>
+            <point key="canvasLocation" x="3111" y="-1828"/>
         </scene>
         <!--QR-->
         <scene sceneID="Kzs-rs-SSp">
